--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -574,6 +574,8 @@
     <Compile Include="Modules\DonatorModule.cs" />
     <Compile Include="Modules\Gambling\GamesModule.cs" />
     <Compile Include="Modules\Gambling\Managers\BlackjackManager.cs" />
+    <Compile Include="Modules\Gambling\Managers\RPS\RPSManager.cs" />
+    <Compile Include="Modules\Gambling\Managers\RPS\Objects\RPSWeapon.cs" />
     <Compile Include="Modules\GeneralModule.cs" />
     <Compile Include="Modules\GuildAccountsModule.cs" />
     <Compile Include="Modules\MarriageModule.cs" />
@@ -598,7 +600,6 @@
     <Compile Include="Modules\ServerCountModule.cs" />
     <Compile Include="Modules\SettingsModule.cs" />
     <Compile Include="Modules\SteamModule.cs" />
-    <Compile Include="Modules\WelcomeMessages.cs" />
     <Compile Include="Notification.cs" />
     <Compile Include="API\Rocket League\Objects\RocketLeagueOptions.cs" />
     <Compile Include="API\Rocket League\Objects\RocketLeaguePlatform.cs" />
@@ -801,7 +802,6 @@
   </Target>
   <PropertyGroup>
     <PostBuildEvent>
-xcopy /s /y "C:\Users\Veld\Documents\miki\packages\NLua.1.3.2.1\lib\native\*.*" "$(TargetDir)"
     </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
