--- a/Miki/packages.config
+++ b/Miki/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net461" />
-  <package id="Discord.Net" version="1.0.2-build-00800" targetFramework="net461" />
-  <package id="Discord.Net.Commands" version="1.0.2-build-00800" targetFramework="net461" />
-  <package id="Discord.Net.Core" version="1.0.2-build-00800" targetFramework="net461" />
-  <package id="Discord.Net.Rest" version="1.0.2-build-00800" targetFramework="net461" />
-  <package id="Discord.Net.Rpc" version="1.0.2-build-00800" targetFramework="net461" />
-  <package id="Discord.Net.Webhook" version="1.0.2-build-00800" targetFramework="net461" />
-  <package id="Discord.Net.WebSocket" version="1.0.2-build-00800" targetFramework="net461" />
+  <package id="Discord.Net" version="1.0.2" targetFramework="net462" />
+  <package id="Discord.Net.Commands" version="1.0.2" targetFramework="net462" />
+  <package id="Discord.Net.Core" version="1.0.2" targetFramework="net462" />
+  <package id="Discord.Net.Rest" version="1.0.2" targetFramework="net462" />
+  <package id="Discord.Net.Rpc" version="1.0.2" targetFramework="net462" />
+  <package id="Discord.Net.Webhook" version="1.0.2" targetFramework="net462" />
+  <package id="Discord.Net.WebSocket" version="1.0.2" targetFramework="net462" />
   <package id="DogStatsD-CSharp-Client" version="3.0.0" targetFramework="net461" />
   <package id="EFCache.RedisCache" version="0.0.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
