--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -549,16 +549,40 @@
     <Compile Include="Migrations\201708030201584_Fix-LocalExp.Designer.cs">
       <DependentUpon>201708030201584_Fix-LocalExp.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201710312001149_Rework-Guild-Db.cs" />
-    <Compile Include="Migrations\201710312001149_Rework-Guild-Db.Designer.cs">
-      <DependentUpon>201710312001149_Rework-Guild-Db.cs</DependentUpon>
+    <Compile Include="Migrations\201711012201158_LevelRole-Update.cs" />
+    <Compile Include="Migrations\201711012201158_LevelRole-Update.Designer.cs">
+      <DependentUpon>201711012201158_LevelRole-Update.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711040132126_FK-BadgedOwned.cs" />
+    <Compile Include="Migrations\201711040132126_FK-BadgedOwned.Designer.cs">
+      <DependentUpon>201711040132126_FK-BadgedOwned.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711040155156_FK-AddUrl.cs" />
+    <Compile Include="Migrations\201711040155156_FK-AddUrl.Designer.cs">
+      <DependentUpon>201711040155156_FK-AddUrl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711040158131_FK-AddName.cs" />
+    <Compile Include="Migrations\201711040158131_FK-AddName.Designer.cs">
+      <DependentUpon>201711040158131_FK-AddName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711040245003_FK-AddName-Optional.cs" />
+    <Compile Include="Migrations\201711040245003_FK-AddName-Optional.Designer.cs">
+      <DependentUpon>201711040245003_FK-AddName-Optional.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711041525517_Add-Pinned-Badges.cs" />
+    <Compile Include="Migrations\201711041525517_Add-Pinned-Badges.Designer.cs">
+      <DependentUpon>201711041525517_Add-Pinned-Badges.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711041535259_Add-Pinned-Badges-FK.cs" />
+    <Compile Include="Migrations\201711041535259_Add-Pinned-Badges-FK.Designer.cs">
+      <DependentUpon>201711041535259_Add-Pinned-Badges-FK.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Objects\ApiKeysModel.cs" />
-    <Compile Include="Models\Objects\Guild\Guild.cs" />
-    <Compile Include="Models\Objects\Guild\GuildRole.cs" />
     <Compile Include="Models\Objects\Guild\Timer.cs" />
+    <Compile Include="Models\Objects\Resources\BadgeResources.cs" />
     <Compile Include="Models\Objects\User\Achievement.cs" />
+    <Compile Include="Models\Objects\User\BadgesOwned.cs" />
     <Compile Include="Models\Objects\User\CommandUsage.cs" />
     <Compile Include="Models\Objects\User\Connections.cs" />
     <Compile Include="Models\Context\MikiContext.cs" />
@@ -573,6 +597,7 @@
     <Compile Include="Models\Objects\User\Marriage.cs" />
     <Compile Include="Models\Objects\Global\PastaVote.cs" />
     <Compile Include="Models\Objects\Global\Setting.cs" />
+    <Compile Include="Models\Objects\User\PinnedBadges.cs" />
     <Compile Include="Models\Objects\User\User.cs" />
     <Compile Include="Models\Objects\Global\VoteCount.cs" />
     <Compile Include="Modules\Accounts\Services\AchievementsService.cs" />
@@ -644,6 +669,9 @@
     <Compile Include="Tests\TestAttribute.cs" />
     <Compile Include="Tests\TestCase.cs" />
     <Compile Include="Tests\MMLTests.cs" />
+    <Compile Include="Utility\MML\MMLFactory.cs" />
+    <Compile Include="Utility\MML\MMLObject.cs" />
+    <Compile Include="Utility\MML\MMLParser.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -790,8 +818,26 @@
     <EmbeddedResource Include="Migrations\201708030201584_Fix-LocalExp.resx">
       <DependentUpon>201708030201584_Fix-LocalExp.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201710312001149_Rework-Guild-Db.resx">
-      <DependentUpon>201710312001149_Rework-Guild-Db.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201711012201158_LevelRole-Update.resx">
+      <DependentUpon>201711012201158_LevelRole-Update.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711040132126_FK-BadgedOwned.resx">
+      <DependentUpon>201711040132126_FK-BadgedOwned.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711040155156_FK-AddUrl.resx">
+      <DependentUpon>201711040155156_FK-AddUrl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711040158131_FK-AddName.resx">
+      <DependentUpon>201711040158131_FK-AddName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711040245003_FK-AddName-Optional.resx">
+      <DependentUpon>201711040245003_FK-AddName-Optional.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711041525517_Add-Pinned-Badges.resx">
+      <DependentUpon>201711041525517_Add-Pinned-Badges.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711041535259_Add-Pinned-Badges-FK.resx">
+      <DependentUpon>201711041535259_Add-Pinned-Badges-FK.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
