--- a/Miki/Miki.csproj
+++ b/Miki/Miki.csproj
@@ -93,10 +93,10 @@
       <HintPath>..\packages\EFCache.RedisCache.0.0.2\lib\EFCache.RedisCache.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework6.Npgsql, Version=3.1.1.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework6.Npgsql.3.1.1\lib\net45\EntityFramework6.Npgsql.dll</HintPath>
@@ -167,9 +167,6 @@
     </Reference>
     <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
-    </Reference>
-    <Reference Include="MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <HintPath>..\packages\MySql.Data.Entity.6.9.9\lib\net45\MySql.Data.Entity.EF6.dll</HintPath>
     </Reference>
     <Reference Include="NCalc, Version=1.3.8.0, Culture=neutral, PublicKeyToken=973cde3f1cafed03, processorArchitecture=MSIL">
       <HintPath>..\packages\ncalc.1.3.8\lib\NCalc.dll</HintPath>
@@ -356,7 +353,8 @@
     <Compile Include="Accounts\Achievements\Objects\TransactionAchievement.cs" />
     <Compile Include="Accounts\Achievements\Objects\UserUpdateAchievement.cs" />
     <Compile Include="Accounts\EmojiBar.cs" />
-    <Compile Include="Accounts\LeaderboardsItem.cs" />
+    <Compile Include="API\Miki\LeaderboardsItem.cs" />
+    <Compile Include="API\Miki\LeaderboardsPage.cs" />
     <Compile Include="API\Cards\CardManager.cs" />
     <Compile Include="API\Cards\CardSet.cs" />
     <Compile Include="API\Cards\Enums\CardType.cs" />
@@ -576,6 +574,14 @@
     <Compile Include="Migrations\201711041535259_Add-Pinned-Badges-FK.cs" />
     <Compile Include="Migrations\201711041535259_Add-Pinned-Badges-FK.Designer.cs">
       <DependentUpon>201711041535259_Add-Pinned-Badges-FK.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711142319369_add-achievement-dates.cs" />
+    <Compile Include="Migrations\201711142319369_add-achievement-dates.Designer.cs">
+      <DependentUpon>201711142319369_add-achievement-dates.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711160131165_add-levelrole-requiredrole.cs" />
+    <Compile Include="Migrations\201711160131165_add-levelrole-requiredrole.Designer.cs">
+      <DependentUpon>201711160131165_add-levelrole-requiredrole.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Objects\ApiKeysModel.cs" />
@@ -838,6 +844,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711041535259_Add-Pinned-Badges-FK.resx">
       <DependentUpon>201711041535259_Add-Pinned-Badges-FK.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711142319369_add-achievement-dates.resx">
+      <DependentUpon>201711142319369_add-achievement-dates.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711160131165_add-levelrole-requiredrole.resx">
+      <DependentUpon>201711160131165_add-levelrole-requiredrole.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
