--- a/Miki/packages.config
+++ b/Miki/packages.config
@@ -10,7 +10,7 @@
   <package id="Discord.Net.WebSocket" version="1.0.2" targetFramework="net462" />
   <package id="DogStatsD-CSharp-Client" version="3.0.0" targetFramework="net461" />
   <package id="EFCache.RedisCache" version="0.0.2" targetFramework="net461" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="EntityFramework.Cache" version="1.1.0" targetFramework="net461" />
   <package id="EntityFramework6.Npgsql" version="3.1.1" targetFramework="net461" />
   <package id="Google.Apis" version="1.20.0" targetFramework="net461" />
@@ -26,6 +26,7 @@
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net461" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="net461" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.28" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
@@ -42,6 +43,7 @@
   <package id="NLua" version="1.3.2.1" targetFramework="net461" />
   <package id="Npgsql" version="3.2.5" targetFramework="net461" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net461" />
+  <package id="RabbitMQ.Client" version="5.0.1" targetFramework="net461" />
   <package id="RestSharp" version="105.2.3" targetFramework="net461" />
   <package id="SharpRaven" version="2.2.0" targetFramework="net461" />
   <package id="StackExchange.Redis" version="1.1.603" targetFramework="net461" />
