Add: interactive config

--- a/Miki.API.Core/Miki.API.Core.csproj
+++ b/Miki.API.Core/Miki.API.Core.csproj
@@ -5,11 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Miki.Rest" Version="1.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Miki.Rest\Miki.Rest.csproj" />
   </ItemGroup>
 
 </Project>
