--- a/Miki.Core/Miki.Core.csproj
+++ b/Miki.Core/Miki.Core.csproj
@@ -188,6 +188,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" />
     <PackageReference Include="Miki.Dsl" Version="1.0.0" />
+    <PackageReference Include="Miki.Rest" Version="1.0.0" />
     <PackageReference Include="NCalc.NetCore" Version="1.0.1" />
     <PackageReference Include="Npgsql" Version="3.2.6" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.1" />
@@ -202,7 +203,6 @@
     <ProjectReference Include="..\Meru.Core.SDK\Meru.Core.SDK.csproj" />
     <ProjectReference Include="..\Meru.Core\Meru.Core.csproj" />
     <ProjectReference Include="..\Miki.API.Core\Miki.API.Core.csproj" />
-    <ProjectReference Include="..\Miki.Rest\Miki.Rest.csproj" />
   </ItemGroup>
 
   <ItemGroup>
